--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.5.2",
     "maath": "^0.10.8",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.7.3",
     "react-parallax-tilt": "^1.7.304",
     "react-router-dom": "^7.8.0",
     "react-tilt": "^1.0.2",
